Add documentation to README.md